done with accuration, confussion matrix and data processing

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,5 @@
 {
-  "venvPath": "/home/habib/py_env",
+  "venvPath": "C:\\",
   "venv": "myenv",
   "pythonVersion": "3.13",
   "reportUnusedFunction": "none",
